@startuml
title Comportamento Dinâmico da Tripulação\nPadrão: STRATEGY

interface IFuncaoTripulante {
    +executarTarefa(nomeTripulante: string) : void
    +getNomeFuncao() : string
}

class OperadorArmas {
    +executarTarefa(nomeTripulante: string) : void
    +getNomeFuncao() : string
}

class MecanicoMotor {
    +executarTarefa(nomeTripulante: string) : void
    +getNomeFuncao() : string
}

class Piloto {
    +executarTarefa(nomeTripulante: string) : void
    +getNomeFuncao() : string
}

class Tripulante {
    -nome: string
    -funcaoAtual: IFuncaoTripulante*
    +Tripulante(nome: string, funcaoInicial: IFuncaoTripulante*)
    +setFuncao(novaFuncao: IFuncaoTripulante*) : void
    +trabalhar() : void
    +getNome() : string
    +getFuncao() : string
}

IFuncaoTripulante <|.. OperadorArmas
IFuncaoTripulante <|.. MecanicoMotor
IFuncaoTripulante <|.. Piloto

Tripulante o-- IFuncaoTripulante : delega (Context -> Strategy) >

note right of Tripulante
  Context do Strategy.
  setFuncao() troca o comportamento
  em runtime SEM destruir o objeto
  e SEM if/else para decidir a lógica.
end note

@enduml
